--- a/src/app/core/estabelecimentos/lista-estabelecimentos-cliente/lista-estabelecimentos-cliente.component.html
+++ b/src/app/core/estabelecimentos/lista-estabelecimentos-cliente/lista-estabelecimentos-cliente.component.html
@@ -4,14 +4,14 @@
   <div class="row">
     <h1 class="mt-3">Buscando por "{{termo}}"</h1>
     <div class="card-container">
-      <div *ngFor="let estabelecimento of esbelecimentos">
-        <a [routerLink]="['/estabelecimentos', estabelecimento.codigo]">
+      <div *ngFor="let produto of produtos">
+        <a [routerLink]="['/produtos', produto.codigo]">
           <mat-card>
-            <mat-card-title>{{estabelecimento.nome}}</mat-card-title>
+            <mat-card-title>{{produto.nome}}</mat-card-title>
             <div class="image-box">
-              <img mat-card-image [src]="getImageUrl(estabelecimento)" [alt]="'Foto de ' + estabelecimento.nome">
+              <img mat-card-image [src]="getImageUrl(produto)" [alt]="'Foto de ' + produto.nome">
             </div>
-            <mat-card-content>{{estabelecimento.nome}}</mat-card-content>
+            <mat-card-content>{{produto.descricao}}</mat-card-content>
           </mat-card>
         </a>
       </div>
