--- a/src/app/core/produtos/cadastro-produtos/cadastro-produtos.component.html
+++ b/src/app/core/produtos/cadastro-produtos/cadastro-produtos.component.html
@@ -14,7 +14,7 @@
         <mat-form-field class="inverso">
           <mat-label>Descrição</mat-label>
           <textarea matInput formControlName="descricao" rows="3"></textarea>
-          <mat-error class="inverso" *ngIf="formulario.get('descricao')?.errors?.required">campo obrigatório</mat-error>
+          <mat-error class="inverso" *ngIf="formulario.get('descricao')?.errors?.required">Campo obrigatório</mat-error>
         </mat-form-field>
 
         <mat-form-field class="inverso">
