--- a/src/app/pagina-nao-encontrada/pagina-nao-encontrada.component.html
+++ b/src/app/pagina-nao-encontrada/pagina-nao-encontrada.component.html
@@ -1,1 +1,2 @@
-<p>pagina-nao-encontrada works!</p>
+<h1>Ops! Não foi encontrado o que você procurava</h1>
+<p>Utilize os menus para navegar pelo sistema</p>
