--- a/src/app/core/estabelecimentos/cadastro-estabelecimento/cadastro-estabelecimento.component.html
+++ b/src/app/core/estabelecimentos/cadastro-estabelecimento/cadastro-estabelecimento.component.html
@@ -15,14 +15,14 @@
         <div class="col-sm-12 col-md-6">
           <mat-form-field appearance="fill">
             <mat-label>Nome da estabelecimento</mat-label>
-            <input matInput formControlName="nome">
+            <input matInput formControlName="nome" required>
             <mat-error *ngIf="formulario.get('nome')?.errors?.required">Campo obrigatório</mat-error>
           </mat-form-field>
         </div>
         <div class="col-sm-12 col-md-6">
           <mat-form-field appearance="fill">
             <mat-label>CNPJ</mat-label>
-            <input matInput mascara="##.###.###/####-##" formControlName="cnpj" maxlength="18">
+            <input matInput mascara="##.###.###/####-##" formControlName="cnpj" maxlength="18" required>
             <mat-error *ngIf="formulario.get('cnpj')?.errors?.required">Campo obrigatório</mat-error>
             <mat-error
               *ngIf="formulario.get('cnpj')?.errors?.minlength || formulario.get('cnpj')?.errors?.cnpjInvalido">
@@ -33,7 +33,7 @@
         <div class="col-12">
           <mat-form-field appearance="fill">
             <mat-label>Descrição</mat-label>
-            <textarea matInput formControlName="descricao" maxlength="500"></textarea>
+            <textarea matInput formControlName="descricao" maxlength="500" required></textarea>
             <mat-error *ngIf="formulario.get('descricao')?.errors?.required">Campo obrigatório</mat-error>
           </mat-form-field>
         </div>
@@ -41,7 +41,7 @@
         <div class="col-sm-12 col-md-6">
           <mat-form-field appearance="fill">
             <mat-label>Telefone</mat-label>
-            <input matInput telefone formControlName="telefone">
+            <input matInput telefone formControlName="telefone" required placeholder="Ex.: (99) 99999-9999">
             <mat-error *ngIf="formulario.get('telefone')?.errors?.required">Campo obrigatório</mat-error>
             <mat-error *ngIf="formulario.get('telefone')?.errors?.minlength">Telefone inválido</mat-error>
           </mat-form-field>
@@ -49,7 +49,7 @@
         <div class="col-sm-12 col-md-6">
           <mat-form-field appearance="fill">
             <mat-label>Imagem</mat-label>
-            <input matInput [formControl]="descricaoImagemInput" maxlength="18">
+            <input matInput [formControl]="descricaoImagemInput" maxlength="18" required>
             <mat-error *ngIf="formulario.get('imagem')?.errors?.required">Campo obrigatório</mat-error>
             <button mat-icon-button matSuffix type="button" (click)="imagemInput.click()">
               <mat-icon>file_upload</mat-icon>
@@ -60,7 +60,7 @@
         <div class="col-12">
           <mat-form-field appearance="fill">
             <mat-label>Categorias</mat-label>
-            <mat-select formControlName="categorias" multiple>
+            <mat-select formControlName="categorias" multiple required>
               <mat-option *ngFor="let categoria of categorias"
                           [value]="categoria.codigo">{{categoria.nome}}</mat-option>
             </mat-select>
@@ -68,66 +68,7 @@
           </mat-form-field>
         </div>
       </div>
-      <div formGroupName="endereco">
-        <h3>Informe o endereço de seu estabelecimento</h3>
-        <div class="row">
-          <div class="col-sm-12 col-md-6">
-            <mat-form-field appearance="fill">
-              <mat-label>CEP</mat-label>
-              <input matInput mascara="#####-###" formControlName="cep">
-              <mat-error *ngIf="formulario.get('endereco.cep')?.errors?.required">Campo obrigatório</mat-error>
-              <mat-error *ngIf="formulario.get('endereco.cep')?.errors?.minlength">CEP inválido</mat-error>
-            </mat-form-field>
-          </div>
-
-          <div class="col-12">
-            <mat-form-field appearance="fill">
-              <mat-label>Rua</mat-label>
-              <input matInput formControlName="rua">
-              <mat-error *ngIf="formulario.get('endereco.rua')?.errors?.required">Campo obrigatório</mat-error>
-            </mat-form-field>
-          </div>
-
-          <div class="col-12">
-            <mat-form-field appearance="fill">
-              <mat-label>Bairro</mat-label>
-              <input matInput formControlName="bairro">
-              <mat-error *ngIf="formulario.get('endereco.bairro')?.errors?.required">Campo obrigatório</mat-error>
-            </mat-form-field>
-          </div>
-
-          <div class="col-sm-12 col-md-6">
-            <mat-form-field appearance="fill">
-              <mat-label>Cidade</mat-label>
-              <input matInput formControlName="cidade">
-              <mat-error *ngIf="formulario.get('endereco.cidade')?.errors?.required">Campo obrigatório</mat-error>
-            </mat-form-field>
-          </div>
-
-          <div class="col-sm-12 col-md-6">
-            <mat-form-field appearance="fill">
-              <mat-label>Estado</mat-label>
-              <input matInput formControlName="estado">
-              <mat-error *ngIf="formulario.get('endereco.estado')?.errors?.required">Campo obrigatório</mat-error>
-            </mat-form-field>
-          </div>
-
-          <div class="col-sm-12 col-md-6">
-            <mat-form-field appearance="fill">
-              <mat-label>Complemento</mat-label>
-              <input matInput formControlName="complemento">
-            </mat-form-field>
-          </div>
-
-          <div class="col-sm-12 col-md-6">
-            <mat-form-field appearance="fill">
-              <mat-label>Número</mat-label>
-              <input matInput formControlName="numero">
-              <mat-error *ngIf="formulario.get('endereco.numero')?.errors?.required">Campo obrigatório</mat-error>
-            </mat-form-field>
-          </div>
-        </div>
-      </div>
+      <app-endereco [formulario]="formulario.get('endereco')"></app-endereco>
       <button mat-button type="submit" [disabled]="formulario.invalid" (click)="cadastraLoja()">Cadastrar</button>
     </form>
   </div>
