--- a/src/app/core/pedidos/novo-pedido/novo-pedido.component.html
+++ b/src/app/core/pedidos/novo-pedido/novo-pedido.component.html
@@ -1,87 +1,88 @@
 <div class="container">
   <div class="row">
-    <div class="col-4">
-      <img style="width: 100%" [src]="getImageUrl(produto.imagem)" [alt]="'Foto de ' + produto.nome">
+    <div class="col-12 col-lg-4 text-align-center">
       <h1>{{produto.nome}}</h1>
-      <p>{{produto.preco | currency}}</p>
+      <img [src]="getImageUrl(produto.imagem)" [alt]="'Foto de ' + produto.nome">
+      <p><b>Preço:</b> {{produto.preco | currency}}</p>
     </div>
-    <div class="col-8">
+    <div class="col-12 col-lg-8">
       <form [formGroup]="formulario" autocomplete="off">
-        <h2>informe data e hora do seu evento</h2>
+        <h2>Informe data e hora do seu evento</h2>
         <div class="row">
-          <div class="col-6">
+          <div class="col-8">
             <mat-form-field appearance="fill">
-              <mat-label>data</mat-label>
-              <input matInput [matDatepicker]="picker" [min]="dataMinima" formControlName="dataAgendamento">
+              <mat-label>Data</mat-label>
+              <input matInput [matDatepicker]="picker" [min]="dataMinima" [readonly]="true" formControlName="dataAgendamento">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
-              <mat-error *ngIf="formulario.get('dataAgendamento')?.errors?.required">campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('dataAgendamento')?.errors?.required">Campo obrigatório</mat-error>
             </mat-form-field>
           </div>
-          <div class="col-6">
+          <div class="col-4">
             <mat-form-field appearance="fill">
-              <mat-label>hora</mat-label>
+              <mat-label>Hora</mat-label>
               <input matInput mascara="##:##" formControlName="horaAgendamento">
-              <mat-error *ngIf="formulario.get('horaAgendamento')?.errors?.required">campo obrigatório</mat-error>
-              <mat-error *ngIf="formulario.get('horaAgendamento')?.errors?.horaInvalida">hora inválida</mat-error>
-              <mat-error *ngIf="formulario?.errors?.dataHoraAgendamentoInvalido">data de agendamento inválida</mat-error>
+              <mat-error *ngIf="formulario.get('horaAgendamento')?.errors?.required">Campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('horaAgendamento')?.errors?.horaInvalida">Hora inválida</mat-error>
             </mat-form-field>
           </div>
-          <mat-error *ngIf="formulario?.errors?.dataHoraAgendamentoInvalido">data de agendamento inválida</mat-error>
         </div>
-        <h2>você possui alguma observação para o estabelecimento?</h2>
+        <h2>Você possui alguma observação para o estabelecimento?</h2>
         <div class="row">
           <div class="col-12">
             <mat-form-field appearance="fill">
-              <mat-label>observação</mat-label>
-              <textarea matInput formControlName="observacao"></textarea>
+              <mat-label>Observação</mat-label>
+              <textarea alfanumerico matInput formControlName="observacao"></textarea>
             </mat-form-field>
           </div>
         </div>
-        <h2>informe os dados de pagamento</h2>
+        <h2>Informe os dados do cartão de crédito</h2>
         <div class="row" formGroupName="cartao">
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <mat-form-field appearance="fill">
-              <mat-label>nome no cartão</mat-label>
-              <input matInput formControlName="nome">
-              <mat-error *ngIf="formulario.get('cartao.nome')?.errors?.required">campo obrigatório</mat-error>
-            </mat-form-field>
-          </div>
-          <div class="col-6">
-            <mat-form-field appearance="fill">
-              <mat-label>número do cartão</mat-label>
+              <mat-label>Número do cartão</mat-label>
               <input matInput mascara="#### #### #### ####" formControlName="numero">
-              <mat-error *ngIf="formulario.get('cartao.numero')?.errors?.required">campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('cartao.numero')?.errors?.required">Campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('cartao.numero')?.errors?.minlength">Número de cartão inválido</mat-error>
             </mat-form-field>
           </div>
-          <div class="col-3">
+          <div class="col-12 col-md-6">
             <mat-form-field appearance="fill">
-              <mat-label>vencimento</mat-label>
+              <mat-label>Nome no cartão</mat-label>
+              <input alfabetico matInput formControlName="nome">
+              <mat-error *ngIf="formulario.get('cartao.nome')?.errors?.required">Campo obrigatório</mat-error>
+            </mat-form-field>
+          </div>
+          <div class="col-6 col-md-4">
+            <mat-form-field appearance="fill">
+              <mat-label>Validade</mat-label>
               <input mascara="##/##" matInput formControlName="dataVencimento">
-              <mat-error *ngIf="formulario.get('cartao.dataVencimento')?.errors?.required">campo obrigatório</mat-error>
-              <mat-error *ngIf="formulario.get('cartao.dataVencimento')?.errors?.vencimentoInvalido">vencimento inválido</mat-error>
+              <mat-error *ngIf="formulario.get('cartao.dataVencimento')?.errors?.required">Campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('cartao.dataVencimento')?.errors?.vencimentoInvalido">Vencimento inválido</mat-error>
             </mat-form-field>
           </div>
-          <div class="col-3">
+          <div class="col-6 col-md-4">
             <mat-form-field appearance="fill">
-              <mat-label>código de segurança</mat-label>
+              <mat-label>Código de segurança</mat-label>
               <input matInput mascara="###" formControlName="cvv">
-              <mat-error *ngIf="formulario.get('cartao.cvv')?.errors?.required">campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('cartao.cvv')?.errors?.required">Campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('cartao.cvv')?.errors?.minlength">Código de segurança deve ter 3 dígitos</mat-error>
             </mat-form-field>
           </div>
         </div>
         <div class="row">
-          <h2>informe a quantidade</h2>
-          <div class="col-3">
+          <h2>Informe a quantidade</h2>
+          <div class="col-6 col-md-4">
             <mat-form-field appearance="fill">
-              <mat-label>quantidade</mat-label>
+              <mat-label>Quantidade</mat-label>
               <input min="1" matInput type="number" formControlName="quantidade">
-              <mat-error *ngIf="formulario.get('quantidade')?.errors?.required">campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('quantidade')?.errors?.required">Campo obrigatório</mat-error>
+              <mat-error *ngIf="formulario.get('quantidade')?.errors?.min">Quantidade minima inválida</mat-error>
             </mat-form-field>
           </div>
         </div>
-        <div class="row">
-          <button mat-button [disabled]="formulario.invalid" (click)="efetuaPedido()">efetuar pedido</button>
+        <div class="text-align-center">
+          <button mat-button [disabled]="formulario.invalid" (click)="efetuaPedido()">Efetuar pedido</button>
         </div>
       </form>
     </div>
